# VirtualPath-EngineClient-UI

./: .gitignore  README.md  VirtualPathCore.sln
VirtualPathCore/: App.axaml  App.axaml.cs  VirtualPathCore.csproj
VirtualPathCore.Desktop/: Program.cs  VirtualPathCore.Desktop.csproj
VirtualPathCore.Desktop/Properties/: launchSettings.json
VirtualPathCore.OpenGL/: VirtualPathCore.OpenGL.cpp
VirtualPathCore.OpenGL/Graphics/: Mesh.h  MeshFactory.cpp  RenderPipeline.h  Shader.cpp  Shader.h  Vertex.h
VirtualPathCore.OpenGL/VirtualPathCore.OpenGL/: CMakeLists.txt  VirtualPathCore.OpenGL.h
VirtualPathCore.OpenGL/VirtualPathCore.OpenGL/Graphics/: Camera.cpp  Camera.h  GLObject.h  Mesh.cpp  MeshFactory.h  RenderPipeline.cpp  Renderer.cpp  Renderer.h
VirtualPathCore/Contracts/Services/: IDrawingService.cs
VirtualPathCore/Graphics/: Camera.cs  Disposable.cs  IGraphicsHost.cs  Vertex.cs
VirtualPathCore/Graphics/OpenGL/: Buffer.cs  Frame.cs  GraphicsResource.cs  Mesh.cs  RenderPipeline.cs  Renderer.cs  Shader.cs  Texture.cs
VirtualPathCore/Helpers/: MathExtensions.cs  MathHelper.cs  MeshFactory.cs
VirtualPathCore/Services/: ExternalDrawingService.cs  SimpleDrawingService.cs
VirtualPathCore/ViewModels/: CreateProjectViewModel.cs  MainViewModel.cs  MainWindowViewModel.cs  ViewLocator.cs  ViewModelBase.cs
VirtualPathCore/Views/: CreateProjectWindow.axaml  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  StartupWindow.axaml  StartupWindow.axaml.cs
VirtualPathCore/Views/Components/: AIChatPanel.axaml  AIChatPanel.axaml.cs  AppMenu.axaml  (+9 more)
